Grace/tests/gibbs/errors/t008.grace
// ERROR = L0003
print("Hello, world.")
